--- a/publishgit/Pages/Index.cshtml
+++ b/publishgit/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Example Web App for Azure CLI Deployment.</h1>
+    <h1 class="display-4">Example Web App for Azure CLI Deployment. v2</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
